istio/02-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springapp-virtualservice
  namespace: aulainfra
spec:
  hosts:
    - "*"
  gateways:
    - springapp-gateway
  http:
    - route:
      - destination:
          host: app-svc.aulainfra.svc.cluster.local
          port:
            number: 80
